--- a/src/components/ui/Header.module.css
+++ b/src/components/ui/Header.module.css
@@ -1,6 +1,17 @@
-.header {
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+}
+
+.title {
   display: flex;
   justify-content: space-between;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
   background-image: url("./../../assets/images/bg-desktop-light.jpg");
   background-position: center;
   background-size: cover;
