--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,5 @@ body {
   font-family: "Josefin Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: hsl(0, 0%, 98%);
 }
