--- a/src/components/TodoList.module.css
+++ b/src/components/TodoList.module.css
@@ -2,4 +2,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
+  box-shadow: 0 0 25px rgb(0, 0, 0, 0.1);
+  border-radius: 5px;
+  overflow: hidden;
 }
