--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "./variables.module.css";
+
 @import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap");
 
 body {
@@ -6,5 +8,4 @@ body {
   font-family: "Josefin Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: hsl(0, 0%, 98%);
 }
